--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,9 @@
+ *, *::before, *::after {
+      -moz-box-sizing: border-box;
+      -webkit-box-sizing: border-box;
+      box-sizing: border-box;
+     }
+
 html {
      height: 100%;
      font-size: 100%;
@@ -20,7 +26,32 @@ body.landing {
 .navbar .logo {
      position: relative;
      left: 2rem;
-}		
+}
+.hero-content {
+     position: relative; 
+     min-height: 600px; 
+     background-image: url(../assets/images/bloc_jams_bg.jpg);
+     background-repeat: no-repeat;
+     background-position: center center;
+     background-size: cover;
+}
+
+.hero-content .hero-title {
+     position: absolute;             
+     top: 40%;                       
+     -webkit-transform: translateY(-50%);
+     -moz-transform: translateY(-50%);
+     -ms-transform: translateY(-50%);
+     transform: translateY(-50%);
+     width: 100%;                    
+     text-align: center;             
+     font-size: 4rem;               
+     font-weight: 300;               
+     text-transform: uppercase;      
+     letter-spacing: 0.5rem;         
+    text-shadow: 1px 1px 0px rgb(58,23,63); 
+}
+
 .selling-points {
     position: relative;
     display: table;
@@ -44,7 +75,7 @@ body.landing {
 			    
 .ion-music-note,
 .ion-radio-waves,
-.ion-iphone {
+.ion-phone {
 color: rgb(233,50,117);
 font-size: 5rem;
 }
