--- a/styles/main.css
+++ b/styles/main.css
@@ -56,6 +56,9 @@ body.landing {
     position: relative;
     display: table;
     width: 100%;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
   }
 			        
 .point {
