--- a/styles/main.css
+++ b/styles/main.css
@@ -102,4 +102,12 @@ html { font-size: 112%; }
 html { font-size: 120%; }
 }
 
+.clearfix::before,
+.clearfix::after {
+	content: " ";
+        display: table;
+ }
 
+.clearfix::after {
+         clear: both;
+	 }
