--- a/styles/main.css
+++ b/styles/main.css
@@ -20,70 +20,56 @@ body.landing {
 	     } 
 
 .navbar {
+     position: relative;
      padding: 0.5rem;
-     background-color: rgb(101,18,95);
-	    }
+     background-color: rgba(101,18,95,0.5);
+     z-index: 1;
+}
+
 .navbar .logo {
      position: relative;
      left: 2rem;
+     cursor: pointer;
 }
-.hero-content {
-     position: relative; 
-     min-height: 600px; 
-     background-image: url(../assets/images/bloc_jams_bg.jpg);
-     background-repeat: no-repeat;
-     background-position: center center;
-     background-size: cover;
+.navbar .links-container {
+     display: table;
+     position: absolute;
+     top: 0;
+     right: 0;
+     height: 100px;
+     color: white;
+     text-decoration: none;
+}
+				   
+.links-container .navbar-link {
+     display: table-cell;
+     position: relative;
+     height: 100%;
+     padding-left: 1rem;
+     padding-right: 1rem;
+     vertical-align: middle;
+     color: white;
+     font-size: 0.625rem;
+     letter-spacing: 0.05rem;
+     font-weight: 700;
+     text-transform: uppercase;
+     text-decoration: none;
+     cursor: pointer;
+}
+														 
+.links-container .navbar-link:hover {
+     color: rgb(233,50,117);
 }
 
-.hero-content .hero-title {
-     position: absolute;             
-     top: 40%;                       
-     -webkit-transform: translateY(-50%);
-     -moz-transform: translateY(-50%);
-     -ms-transform: translateY(-50%);
-     transform: translateY(-50%);
-     width: 100%;                    
-     text-align: center;             
-     font-size: 4rem;               
-     font-weight: 300;               
-     text-transform: uppercase;      
-     letter-spacing: 0.5rem;         
-    text-shadow: 1px 1px 0px rgb(58,23,63); 
+.links-container .navbar-link:active {
+	background-color: white;
 }
 
-.selling-points {
-    position: relative;
-    display: table;
-    width: 100%;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-  }
-			        
-.point {
-    display: table-cell;
-    position: relative;
-    width: 33.3%;
-    padding: 2rem;
-    text-align: center;
-   }
-		    
-.point .point-title {
-    font-size: 1.25rem;
-   }
-			    
-.ion-music-note,
-.ion-radio-waves,
-.ion-phone {
-color: rgb(233,50,117);
-font-size: 5rem;
-}
 .container {
 	margin: 0 auto;
 	max-width: 64rem;
-}	
-@media (min-width: 640px) {
+
+media (min-width: 640px) {
 html { font-size: 112%; }
 
 	.column {
