--- a/styles/main.css
+++ b/styles/main.css
@@ -68,6 +68,11 @@ body.landing {
 .container {
 	margin: 0 auto;
 	max-width: 64rem;
+}
+
+.container.narrow {
+     max-width: 56rem;
+}
 
 media (min-width: 640px) {
 html { font-size: 112%; }
