--- a/styles/album.css
+++ b/styles/album.css
@@ -1,16 +1,17 @@
 body.album {
-      background-image: url(../assets/images/blurred_backgrounds/blur_bg_3.jpg);
-      background-repeat: no-repeat;
-      background-attachment: fixed;
-      background-position: center center;
-      background-size: cover;
+	background-image: url(../assets/images/blurred_backgrounds/blur_bg_3.jpg);
+	background-repeat: no-repeat;
+      	background-attachment: fixed;
+      	background-position: center center;
+      	background-size: cover;
+      	padding-bottom: 200px;
 }
 	    
 .album-cover-art {
-      position: relative;
-      left: 20%;
-      margin-top: 1rem;
-      width: 60%;
+      	position: relative;
+      	left: 20%;
+      	margin-top: 1rem;
+      	width: 60%;
 }						   
 
 .album-view-details {
